# SmartMail

./: .gitignore  CLAUDE.md  CMakeLists.txt  findings.md  progress.md  task_plan.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/account/: AccountManager.cpp  AccountManager.hpp  CryptoUtils.cpp  CryptoUtils.hpp
backend/src/ai/: AiService.cpp  AiService.hpp  OpenAiClient.cpp  OpenAiClient.hpp
backend/src/engine/: IMailProtocol.hpp  ImapClient.cpp  ImapClient.hpp  Pop3Client.cpp  Pop3Client.hpp  SmtpClient.cpp  SmtpClient.hpp
backend/src/server/: ApiServer.cpp  ApiServer.hpp
backend/src/storage/: StorageManager.cpp  StorageManager.hpp  schema.sql
backend/tests/: test_phase3.cpp  test_phase4.cpp  test_phase5.cpp  test_phase6.cpp  test_phase6_minimal.cpp  test_phase7.cpp  test_storage.cpp
common/types/: AccountConfig.hpp  AiResult.hpp  Email.hpp
common/utils/: Config.hpp  Logger.hpp
frontend/: CMakeLists.txt
frontend/resources/: resources.qrc  style.qss
frontend/resources/icons/: placeholder.txt
frontend/src/: main.cpp
frontend/src/client/: ServiceClient.cpp  ServiceClient.hpp  WebSocketHandler.cpp  WebSocketHandler.hpp
frontend/src/dialogs/: AccountDialog.cpp  AccountDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
frontend/src/models/: FolderModel.cpp  FolderModel.hpp  MailModel.cpp  MailModel.hpp
frontend/src/views/: AiPanel.cpp  AiPanel.hpp  EmailComposer.cpp  EmailComposer.hpp  EmailDetailView.cpp  EmailDetailView.hpp  EmailListView.cpp  EmailListView.hpp  MainWindow.cpp  MainWindow.hpp
